--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t kuantse/react-test -f ./client/Dockerfile.dev .
+  - docker build -t kuantse/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run kuantse/react-test npm run test -- --coverage
