--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - docker build -t kuantse/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run kuantse/react-test npm run test -- --coverage
+  - docker run -e CI=true kuantse/react-test npm run test
 
 after_success:
   - docker build -t kuantse/multi-client ./client
